# mathclub

./: CMakeLists.txt  build.sh  main.cc
include/: Matrix.h
src/: CMakeLists.txt  Matrix.cc
tests/: CMakeLists.txt
